--- a/app/src/app/globals.css
+++ b/app/src/app/globals.css
@@ -8,7 +8,7 @@
       --foreground: 218, 6%, 27%;/* 222.2 84% 4.9% */
 
       --card: 0 0% 100%;
-      --card-foreground: 222.2 84% 4.9%;
+      --card-foreground: 218, 6%, 27%;/* 222.2 84% 4.9% */
 
       --popover: 0 0% 100%;
       --popover-foreground: 222.2 84% 4.9%;
@@ -71,6 +71,6 @@
       @apply border-border;
     }
     body {
-      @apply bg-background text-foreground;
+      @apply bg-background text-primary;
     }
   }
